--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-  <title>TLDA Trading</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <title>TLDA Trading</title>
 </head>
 <body>
     <section>
